<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonarsource.sonarlint.core</groupId>
    <artifactId>sonarlint-core-parent</artifactId>
    <version>11.0-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>
  <artifactId>sonarlint-client-parent</artifactId>
  <packaging>pom</packaging>
  <name>SonarLint Core - Client</name>

  <properties>
    <!--
      client/ modules must compile with Java 11 because they are dependencies
      for the SonarLint Core OSGi bundle used on SonarQube for Eclipse, which
      itself compiles with Java 11.
    -->
    <maven.compiler.release>11</maven.compiler.release>
  </properties>

  <modules>
    <module>java-client-dependencies</module>
    <module>java-client-utils</module>
    <module>java-client-osgi</module>
    <module>rpc-java-client</module>
  </modules>

</project>
